Changes between 1.1.0 and ???:
---------------

 [project]

 * Further licensing clarification

 [pulse-binding]

 * Fixed lifetime issues with a handful of stream methods.
 * mainloop/standard: Fixed `run` method's return data. Incorrectly was returning function call
   result, while claiming in the documentation that this was the quit retval, which wasn't returned
   at all.
 * Tidied up error code handling:
    - add `PAErr` wrapper for i32 error type, for cleaner interfaces
    - move `strerror` function to `PAErr` method
    - rename `sterror` `PAErr` and `Code` methods to `to_string`
    - convert the error CStr to String for the users, no need to make users do it
    - add `PAErr` <=> `Code` `From` impls
 * Simplified volume handling:
    - `Volume` and `VolumeDB` are now wrappers rather than type aliases
    - Added the `VolumeLinear` wrapper. I had mistakenly taken floating point volumes to all be dB
      values, but there is actually a distinction between dB and 'linear factor', as per the C API
      conversion functions. This is now used in linear related convertions, which thus no longer
      incorrectly portray such values to be dB scale.
    - Renamed `DECIBEL_MININFTY` to `DECIBEL_MINUS_INFINITY`
    - CVolume `inc` and `dec` methods renamed to `increase` and `decrease` respectively for clarity,
      they are not increment/decrement.
 * Stream:
    - The buffer given by `begin_write` is now converted to a slice for you, rather than burdening
      the caller.
    - The return type of `begin_write` has been further simplified, ditching the custom
      `BufferResult` object.
    - Minor doc fixes
 * Derived more common traits for a handful of structs/enums
 * Implemented `PartialEq` for `::channelmap::Map` and `::volume::CVolume`
 * Removed Copy,Clone derives from def::SpawnApi
 * Improved time handling:
    - Added `Timeval` wrapper
    - Introduced `MicroSeconds` u64 wrapper, replacing use of `::sample::Usecs` (now removed)